src/objects/Branch_Dashboard__c.object
<CustomObject>
    <fields>
        <fullName>AIPs_Actual__c</fullName>
        <label>AIPs Actual</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIPs_RAg__c</fullName>
        <label>AIPs RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIPs_Target__c</fullName>
        <label>AIPs Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch_Documents__c</referenceTo>
        <relationshipLabel>Branch Dashboards</relationshipLabel>
        <relationshipName>Branch_Dashboards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget_FTE_Actual__c</fullName>
        <label>Budget FTE Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_FTE_RAG__c</fullName>
        <label>Budget FTE: RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_FTE_Variance__c</fullName>
        <label>Budget FTE: Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_FTE__c</fullName>
        <label>Budget FTE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFL_RAG__c</fullName>
        <label>CFL RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFL_Score_Actual__c</fullName>
        <label>CFL Score Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFL_Score_Target__c</fullName>
        <label>CFL Score Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFL_Score_Variance__c</fullName>
        <label>CFL Score Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSI_Actual__c</fullName>
        <label>CSI Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSI_RAG__c</fullName>
        <label>CSI RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSI_Target__c</fullName>
        <label>CSI Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSI_Variance__c</fullName>
        <label>CSI Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaints_Logged_RAG__c</fullName>
        <label>Complaints Logged RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_Error_RAG__c</fullName>
        <label>Cost of Error RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_Errors_Actual__c</fullName>
        <label>Cost of Errors Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Errors_Target__c</fullName>
        <label>Cost of Errors Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Errors_Variance__c</fullName>
        <label>Cost of Errors Variance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counter_Transactions__c</fullName>
        <label>Counter Transactions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Opps_RAG__c</fullName>
        <label>Eligible Opps RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GOGW_Actual__c</fullName>
        <label>GOGW Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GOGW_RAG__c</fullName>
        <label>GOGW RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GOGW_Target__c</fullName>
        <label>GOGW Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GOGW_Variance__c</fullName>
        <label>GOGW Variance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Eligible_Opps_Actual__c</fullName>
        <label>HPP Eligible Opps Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Eligible_Opps_Targets__c</fullName>
        <label>HPP Eligible Opps Targets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highlight__c</fullName>
        <label>Highlight</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Liabilities_Actual__c</fullName>
        <label>Liabilities Actual</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liabilities_RAG__c</fullName>
        <label>Liabilities RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liabilities_Target__c</fullName>
        <label>Liabilities Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Keep_In_View__c</fullName>
        <label>Management Keep In View</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Jan 2012</fullName>
                </value>
                <value>
                    <fullName>Feb 2012</fullName>
                </value>
                <value>
                    <fullName>Mar 2012</fullName>
                </value>
                <value>
                    <fullName>Apr 2012</fullName>
                </value>
                <value>
                    <fullName>May 2012</fullName>
                </value>
                <value>
                    <fullName>Jun 2012</fullName>
                </value>
                <value>
                    <fullName>Jul 2012</fullName>
                </value>
                <value>
                    <fullName>Aug 2012</fullName>
                </value>
                <value>
                    <fullName>Sep 2012</fullName>
                </value>
                <value>
                    <fullName>Oct 2012</fullName>
                </value>
                <value>
                    <fullName>Nov 2012</fullName>
                </value>
                <value>
                    <fullName>Dec 2012</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customers__c</fullName>
        <label>New Customers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Complaints_Logged_Actual__c</fullName>
        <label>Number of Complaints Logged Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Complaints_Logged_Variance__c</fullName>
        <label>Number of Complaints Logged Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Upheld_Complaints_Actual__c</fullName>
        <inlineHelpText>Should be no more than 8% of the number of complaints logged.</inlineHelpText>
        <label>Number of Upheld Complaints Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Upheld_Complaints_Variance__c</fullName>
        <label>Number of Upheld Complaints Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_for_the_Month__c</fullName>
        <label>Plan for the Month</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Shrinkage_Holidays_Target__c</fullName>
        <label>Shrinkage: Holidays: Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shrinkage_Holidays_Variance__c</fullName>
        <label>Shrinkage: Holidays Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shrinkage_Holidays__c</fullName>
        <label>Shrinkage: Holidays: RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shrinkage_Sickness_RAG__c</fullName>
        <label>Shrinkage: Sickness RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shrinkage_Sickness_Variance__c</fullName>
        <label>Shrinkage: Sickness Variance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shrinkage_Sickness__c</fullName>
        <label>Shrinkage: Sickness %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shrinkage_Target__c</fullName>
        <label>Shrinkage: Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shrinkage__c</fullName>
        <label>Shrinkage: Holidays Actual %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Till_Differences_Targets__c</fullName>
        <label>Till Differences Targets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Till_Differences_Variance__c</fullName>
        <label>Till Differences Variance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Till_Differences__c</fullName>
        <label>Till Differences RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Till_differences_Actual__c</fullName>
        <label>Till differences Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upheld_Complaints_RAG__c</fullName>
        <label>Upheld Complaints RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Branch Dashboard</label>
    <nameField>
        <displayFormat>BD{0000}</displayFormat>
        <label>Branch Dashboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Dashboards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>